# codex-agent

./: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  architecture.mmd  pyproject.toml  releasenote.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  run_agent_mac.sh  run_agent_ubuntu.sh  run_control_plane.sh  run_feishu_connector.sh  run_imessage_connector.sh  seed_demo_data.sh
src/agent_mac/: __init__.py  codex_reader.py  runner.py
src/agent_ubuntu/: __init__.py  codex_exec.py  memory_client.py  runner.py
src/common/: __init__.py  errors.py  models.py  settings.py  timeutil.py
src/connectors/: bluebubbles_bridge.py  command_bridge.py  feishu_bridge.py  mock_feishu.py  mock_imessage.py
src/control_plane/: app.py
src/control_plane/api/: __init__.py  agents.py  events.py  memory.py  sessions.py  tasks.py
src/control_plane/repo/: schema.sql  sqlite.py
src/control_plane/services/: bootstrap.py  dedupe.py  memory_index.py  notification.py  oss_store.py  router.py
tests/: conftest.py
tests/e2e/: test_mock_connector_to_agent_completion.py
tests/integration/: test_control_plane_flow.py  test_event_fanout.py  test_memory_chain.py  test_sessions_commands.py
tests/unit/: test_bluebubbles_bridge.py  test_bluebubbles_webhook.py  test_bootstrap.py  test_command_bridge.py  test_dedupe.py  test_feishu_bridge.py  test_feishu_webhook.py  test_memory_rules.py  test_notification.py  test_router.py
